# OliRover

./: .gitignore  .gitmodules  README.md  prod_environment.sh  requirements.txt  sim_environment.sh
controller/: CMakeLists.txt  app.ld
controller/inc/: cbwo.h  controller.h  sim_api.h
controller/src/: cbwo.c  controller.c  main.c  simulator.c  simulator_old.c
interface/: interface.h  interface.py
rover/: OliRover.service  get_output_live.sh  rover.py  run_prod.sh
sim/: CMakeLists.txt  OliRoverInterface.cc  OliRoverInterface.hh  olirover.sdf  run.sh
support/: reference.py  remote.py  sim_plotter.py  toolbox.py
support/swdl/: swdl.py  swdl_remote.py
